Enhance marketing content and styling in index.html and marketing.css

--- a/index.html
+++ b/index.html
@@ -36,20 +36,21 @@
       <div class="container hero-grid">
         <div class="fade-up">
           <p class="pill">Ops OS</p>
-          <h1>Command-grade inventory for service crews.</h1>
-          <p>Modulr syncs procurement, allocation, and field checkouts into one real-time ops console. Cut downtime, track every move, and stay audit ready.</p>
+          <h1>Stop Losing Inventory. Run It Like a Command Center.</h1>
+          <p class="whisper">Built for SMBs who manage real equipment, not spreadsheets.</p>
+          <p>Modulr unifies purchasing, inventory, and field usage into one real-time operations console—so nothing goes missing, work never stalls, and every movement is auditable.</p>
           <div class="hero-actions">
-            <a class="btn btn-primary" href="contact.html">Request a demo</a>
-            <a class="btn btn-secondary" href="pricing.html">See pricing</a>
+            <a class="btn btn-primary" href="contact.html">Request a Live demo</a>
+            <a class="btn btn-secondary" href="pricing.html">View Pricing and Plans</a>
           </div>
           <div class="hero-stats">
             <div class="stat">
               <strong>32%</strong>
-              <span class="muted">less downtime</span>
+              <span class="muted">Reduction in operational downtime</span>
             </div>
             <div class="stat">
               <strong>7 days</strong>
-              <span class="muted">deployment window</span>
+              <span class="muted">Live in under</span>
             </div>
             <div class="stat">
               <strong>99.95%</strong>
@@ -58,26 +59,26 @@
           </div>
         </div>
         <div class="hero-card fade-up delay-2">
-          <h3>Ops Console Snapshot</h3>
-          <p class="muted">Monitor open orders, live stock, and allocations across every site.</p>
+          <h3>Live Operations Console</h3>
+          <p class="muted">See orders, inventory levels, and job allocations across every location—updated in real time.</p>
           <div class="grid">
             <div class="card">
               <strong>Open Orders</strong>
-              <p class="muted">24 lines, 3 overdue</p>
+              <p class="muted">24 open orders, 3 overdue</p>
             </div>
             <div class="card">
               <strong>Available Units</strong>
-              <p class="muted">8,412 in stock</p>
+              <p class="muted">8,412 units available</p>
             </div>
             <div class="card">
               <strong>Reserved</strong>
-              <p class="muted">1,160 tied to active jobs</p>
+              <p class="muted">1,160 Reserved across active jobs</p>
             </div>
           </div>
           <div class="badge-row">
-            <span class="pill">Audit trails</span>
-            <span class="pill">Multi-tenant</span>
-            <span class="pill">Role based access</span>
+            <span class="pill">Full Audit trails</span>
+            <span class="pill">Multi-tenant Architecture</span>
+            <span class="pill">Role based access control</span>
           </div>
         </div>
       </div>
