Design re-worked

--- a/features.html
+++ b/features.html
@@ -35,7 +35,7 @@
     <section class="hero">
       <div class="container hero-grid">
         <div class="fade-up">
-          <p class="pill">Ops modules</p>
+          <p class="pill">ModuluR Features</p>
           <h1>Industrial workflows, tuned for speed.</h1>
           <p>Modulr powers procurement, allocation, and audit-ready tracking in a single industrial control stack.</p>
           <div class="hero-actions">
