--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section class="hero">
       <div class="container hero-grid">
         <div class="fade-up">
-          <p class="pill">Ops OS</p>
+          <p class="pill"></p>
           <h1>Stop Losing Inventory. Run It Like a Command Center.</h1>
           <p class="whisper">Built for SMBs who manage real equipment, not spreadsheets.</p>
           <p>Modulr unifies purchasing, inventory, and field usage into one real-time operations console—so nothing goes missing, work never stalls, and every movement is auditable.</p>
