--- a/pricing.html
+++ b/pricing.html
@@ -35,7 +35,7 @@
     <section class="hero">
       <div class="container hero-grid">
         <div class="fade-up">
-          <p class="pill">Ops pricing</p>
+          <p class="pill">Pricing</p>
           <h1>Plans built for industrial ops.</h1>
           <p>Pick a plan that fits your operations today and grow into automation, analytics, and enterprise controls.</p>
           <div class="hero-actions">
