--- a/security.html
+++ b/security.html
@@ -35,7 +35,7 @@
     <section class="hero">
       <div class="container hero-grid">
         <div class="fade-up">
-          <p class="pill">Security core</p>
+          <p class="pill">Security</p>
           <h1>Industrial-grade protection, from day one.</h1>
           <p>Modulr protects your data with strong access controls, encryption, and audit trails designed for industrial teams.</p>
           <div class="hero-actions">
