Update content in features.html, pricing.html, and security.html for improved clarity and consistency

--- a/features.html
+++ b/features.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Modulr Features | Industrial ops modules</title>
-  <meta name="description" content="Explore Modulr modules for procurement, allocation, audit trails, and field checkouts. Built for industrial operations teams." />
+  <meta name="description" content="Explore Modulr modules for procurement, allocation, audit trails, and field checkouts. Built for operations teams." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@500;600;700&family=Sora:wght@400;500;600;700&display=swap" rel="stylesheet" />
@@ -37,7 +37,7 @@
         <div class="fade-up">
           <p class="pill">ModuluR Features</p>
           <h1>Industrial workflows, tuned for speed.</h1>
-          <p>Modulr powers procurement, allocation, and audit-ready tracking in a single industrial control stack.</p>
+          <p>Modulr powers procurement, allocation, and audit-ready tracking in a single control stack.</p>
           <div class="hero-actions">
             <a class="btn btn-primary" href="contact.html">Request a demo</a>
             <a class="btn btn-secondary" href="pricing.html">Compare plans</a>
