--- a/pricing.html
+++ b/pricing.html
@@ -36,7 +36,7 @@
       <div class="container hero-grid">
         <div class="fade-up">
           <p class="pill">Pricing</p>
-          <h1>Plans built for industrial ops.</h1>
+          <h1>Plans built for modern ops.</h1>
           <p>Pick a plan that fits your operations today and grow into automation, analytics, and enterprise controls.</p>
           <div class="hero-actions">
             <a class="btn btn-primary" href="contact.html">Talk to sales</a>
