--- a/security.html
+++ b/security.html
@@ -37,7 +37,7 @@
         <div class="fade-up">
           <p class="pill">Security</p>
           <h1>Industrial-grade protection, from day one.</h1>
-          <p>Modulr protects your data with strong access controls, encryption, and audit trails designed for industrial teams.</p>
+          <p>Modulr protects your data with strong access controls, encryption, and audit trails designed for operations teams.</p>
           <div class="hero-actions">
             <a class="btn btn-primary" href="contact.html">Request security brief</a>
             <a class="btn btn-secondary" href="features.html">View features</a>
