--- a/pricing.html
+++ b/pricing.html
@@ -15,7 +15,7 @@
     <div class="container header-inner">
       <a class="logo" href="index.html">
         <span class="logo-mark">MT</span>
-        <div class="logo-text">Modulr<span>Industrial inventory</span></div>
+        <div class="logo-text">Modulr<span>THE FUTURE OF BUSINESS OS</span></div>
       </a>
       <nav class="site-nav" id="site-nav">
         <a href="index.html">Home</a>
