--- a/inventory-list.html
+++ b/inventory-list.html
@@ -128,6 +128,47 @@
     </main>
   </div>
 
+  <div class="side-panel-backdrop" id="itemPanelBackdrop"></div>
+  <aside class="side-panel" id="itemPanel" aria-hidden="true">
+    <div class="side-panel-header">
+      <div>
+        <div class="panel-kicker">Item Details</div>
+        <h2 id="itemPanelTitle">Item</h2>
+        <div class="panel-sub" id="itemPanelName">-</div>
+      </div>
+      <button class="icon-btn" id="itemPanelClose" type="button" aria-label="Close">×</button>
+    </div>
+    <div class="side-panel-body">
+      <div class="panel-badges" id="itemPanelBadges"></div>
+      <div class="panel-metrics">
+        <div class="panel-metric"><span>Available</span><strong id="itemPanelAvailable">-</strong></div>
+        <div class="panel-metric"><span>Reserved</span><strong id="itemPanelReserved">-</strong></div>
+        <div class="panel-metric"><span>Checked Out</span><strong id="itemPanelCheckedOut">-</strong></div>
+      </div>
+      <div class="panel-list">
+        <div class="panel-row"><span>Category</span><strong id="itemPanelCategory">-</strong></div>
+        <div class="panel-row"><span>Low Stock Threshold</span><strong id="itemPanelThreshold">-</strong></div>
+        <div class="panel-row"><span>Assigned Projects</span><strong id="itemPanelProjects">-</strong></div>
+        <div class="panel-row"><span>Last Activity</span><strong id="itemPanelLastActivity">-</strong></div>
+        <div class="panel-row"><span>Last Count</span><strong id="itemPanelLastCount">-</strong></div>
+        <div class="panel-row"><span>Counted Qty</span><strong id="itemPanelCountedQty">-</strong></div>
+        <div class="panel-row"><span>Discrepancy</span><strong id="itemPanelDiscrepancy">-</strong></div>
+      </div>
+      <div class="panel-section">
+        <h3>Checked Out by Project</h3>
+        <div id="itemPanelCheckedOutProjects"></div>
+      </div>
+      <div class="panel-section">
+        <h3>Reserved by Project</h3>
+        <div id="itemPanelReservedProjects"></div>
+      </div>
+      <div class="panel-section">
+        <h3>Description</h3>
+        <p class="panel-note" id="itemPanelDescription"></p>
+      </div>
+    </div>
+  </aside>
+
   <script src="js/utils.js"></script>
   <script src="js/inventory-list.js"></script>
   <script>document.addEventListener('DOMContentLoaded',()=>{if(window.utils){utils.wrapFetchWithRole?.();utils.applyStoredTheme?.();utils.applyNavVisibility?.();utils.setupLogout?.();}});</script>
