Add tags functionality to item management and inventory display

--- a/inventory-list.html
+++ b/inventory-list.html
@@ -153,6 +153,7 @@
           <div class="panel-row"><span>Item Code</span><strong id="itemPanelCode">-</strong></div>
           <div class="panel-row"><span>Category</span><strong id="itemPanelCategory">-</strong></div>
           <div class="panel-row"><span>Unit Price</span><strong id="itemPanelPrice">-</strong></div>
+          <div class="panel-row"><span>Tags</span><strong id="itemPanelTags">-</strong></div>
         </div>
         <p class="panel-note" id="itemPanelDescription"></p>
       </div>
