--- a/item-master.html
+++ b/item-master.html
@@ -64,6 +64,9 @@
               <label>Unit Price<input id="unitPrice" type="number" step="0.01" placeholder="Optional"></label>
             </div>
             <div class="form-row">
+              <label>Tags<input id="itemTags" placeholder="Fragile, Hazmat, Bulk, Internal alert"></label>
+            </div>
+            <div class="form-row">
               <label style="flex:1">Description<textarea id="description" rows="2" placeholder="Additional details"></textarea></label>
             </div>
             <div class="form-row">
@@ -75,7 +78,7 @@
 
         <section class="card inventory-card">
           <h3>Import Item Master (CSV)</h3>
-          <p class="muted-text">Columns: code,name,category,unitPrice,description. Header row optional.</p>
+          <p class="muted-text">Columns: code,name,category,unitPrice,description,tags. Header row optional.</p>
           <div class="form-row">
             <input id="importFile" type="file" accept=".csv,text/csv">
             <button id="downloadTemplateBtn" type="button" class="muted">Download Template</button>
