--- a/item-master.html
+++ b/item-master.html
@@ -66,6 +66,12 @@
             <div class="form-row">
               <label>Tags<input id="itemTags" placeholder="Fragile, Hazmat, Bulk, Internal alert"></label>
             </div>
+            <div class="form-row" style="align-items:center;">
+              <label style="display:flex;align-items:center;gap:8px;">
+                <input id="itemLowStockEnabled" type="checkbox" checked>
+                Enable low stock alerts
+              </label>
+            </div>
             <div class="form-row">
               <label style="flex:1">Description<textarea id="description" rows="2" placeholder="Additional details"></textarea></label>
             </div>
@@ -78,7 +84,7 @@
 
         <section class="card inventory-card">
           <h3>Import Item Master (CSV)</h3>
-          <p class="muted-text">Columns: code,name,category,unitPrice,description,tags. Header row optional.</p>
+          <p class="muted-text">Columns: code,name,category,unitPrice,description,tags,lowStockEnabled. Header row optional.</p>
           <div class="form-row">
             <input id="importFile" type="file" accept=".csv,text/csv">
             <button id="downloadTemplateBtn" type="button" class="muted">Download Template</button>
@@ -109,6 +115,12 @@
               <label>Category Name<input id="categoryName" required placeholder="e.g., Electrical, Safety"></label>
               <label>Low Stock Alert
                 <input id="categoryLowStock" type="number" min="0" step="1" placeholder="Default 5">
+              </label>
+            </div>
+            <div class="form-row" style="align-items:center;">
+              <label style="display:flex;align-items:center;gap:8px;">
+                <input id="ruleLowStockEnabled" type="checkbox" checked>
+                Enable low stock alerts
               </label>
             </div>
             <div class="form-row">
@@ -148,9 +160,8 @@
     </main>
   </div>
 
-  <div class="modal-backdrop" id="itemEditBackdrop"></div>
-  <div class="modal" id="itemEditModal" aria-hidden="true">
-    <div class="modal-card">
+  <div class="modal hidden" id="itemEditModal" aria-hidden="true">
+    <div class="modal-content">
       <div class="modal-header">
         <div>
           <div class="panel-kicker">Edit Item</div>
@@ -171,6 +182,12 @@
         </div>
         <div class="form-row">
           <label>Tags<input id="itemEditTags" placeholder="Fragile, Hazmat, Bulk, Internal alert"></label>
+        </div>
+        <div class="form-row" style="align-items:center;">
+          <label style="display:flex;align-items:center;gap:8px;">
+            <input id="itemEditLowStockEnabled" type="checkbox" checked>
+            Enable low stock alerts
+          </label>
         </div>
         <div class="form-row">
           <label style="flex:1">Description<textarea id="itemEditDescription" rows="2" placeholder="Additional details"></textarea></label>
