--- a/support.html
+++ b/support.html
@@ -26,7 +26,7 @@
         <a href="inventory-operations.html">Operations</a>
         <a href="field-purchase.html">Field Purchases</a>
         <a href="inventory-list.html">Inventory</a>
-        <a href="item-master.html" data-role="admin">Item Master</a>
+        <a href="item-master.html" data-role="admin">Catalog</a>
         <a href="job-creator.html" data-role="admin">Project Manager</a>
         <a href="order-register.html" data-role="admin">Procurement &amp; Allocation</a>
         <a href="analytics.html" data-role="admin">Analytics</a>
