--- a/dashboard.html
+++ b/dashboard.html
@@ -29,7 +29,7 @@
         <a href="inventory-operations.html">Operations</a>
         <a href="field-purchase.html" >Field Purchases</a>
         <a href="inventory-list.html">Inventory</a>
-        <a href="item-master.html" data-role="admin">Item Master</a>
+        <a href="item-master.html" data-role="admin">Catalog</a>
         <a href="job-creator.html" data-role="admin">Project Manager</a>
         <a href="order-register.html" data-role="admin">Procurement &amp; Allocation</a>
         <a href="analytics.html" data-role="admin">Analytics</a>
@@ -61,7 +61,7 @@
             <div class="tile-sub">Place/allocate stock</div>
           </a>
           <a class="action-tile" href="item-master.html">
-            <div class="tile-title">Item Master</div>
+            <div class="tile-title">Catalog</div>
             <div class="tile-sub">Edit catalog</div>
           </a>
           <a class="action-tile" href="job-creator.html">
