Normalize date formatting across UI

--- a/employee-dashboard.html
+++ b/employee-dashboard.html
@@ -160,7 +160,7 @@
       pending.slice(0,8).forEach(p=>{
         const tr=document.createElement('tr');
         const overdue = (Date.now() - (p.lastOut||0)) > 2*24*60*60*1000;
-        const dt = (window.utils && utils.formatDateTime) ? utils.formatDateTime(p.lastOut) : (p.lastOut ? new Date(p.lastOut).toLocaleString() : '');
+        const dt = utils.formatDateTime?.(p.lastOut) || '';
         tr.innerHTML=`<td>${p.code}</td><td>${p.jobId||''}</td><td>${p.out}</td><td style="${overdue?'color:#b91c1c;font-weight:700;':''}">${p.outstanding}</td><td>${dt}</td>`;
         tbody.appendChild(tr);
       });
@@ -177,7 +177,7 @@
       }
       recent.forEach(e=>{
         const tr=document.createElement('tr');
-        const dt = (window.utils && utils.formatDateTime) ? utils.formatDateTime(e.ts) : (e.ts ? new Date(e.ts).toLocaleString() : '');
+        const dt = utils.formatDateTime?.(e.ts) || '';
         tr.innerHTML=`<td>${typeLabel(e.type)}</td><td>${e.code}</td><td>${e.qty}</td><td>${e.jobId||''}</td><td>${dt}</td>`;
         tbody.appendChild(tr);
       });
@@ -197,7 +197,6 @@
   </script>
 </body>
 </html>
-
 
 
 
