--- a/item-master.html
+++ b/item-master.html
@@ -114,10 +114,12 @@
           <div style="margin-bottom:12px;">
             <input id="searchBox" type="text" placeholder="Search by code or name..." style="padding:8px;border-radius:6px;border:1px solid #e6edf3;width:100%;max-width:300px;">
           </div>
-          <table id="itemTable">
-            <thead><tr><th>Code</th><th>Name</th><th>Category</th><th>UOM</th><th>Unit Price</th><th>Reorder Pt</th><th>Actions</th></tr></thead>
-            <tbody></tbody>
-          </table>
+          <div class="table-scroll">
+            <table id="itemTable">
+              <thead><tr><th>Code</th><th>Name</th><th>Category</th><th>UOM</th><th>Unit Price</th><th>Reorder Pt</th><th>Actions</th></tr></thead>
+              <tbody></tbody>
+            </table>
+          </div>
         </section>
       </div>
 
@@ -275,7 +277,6 @@
   <script>document.addEventListener('DOMContentLoaded',()=>{if(window.utils){utils.wrapFetchWithRole?.();utils.applyStoredTheme?.();utils.applyNavVisibility?.();utils.setupLogout?.();}});</script>
 </body>
 </html>
-
 
 
 
