--- a/item-master.html
+++ b/item-master.html
@@ -116,7 +116,7 @@
           </div>
           <div class="table-scroll">
             <table id="itemTable">
-              <thead><tr><th>Code</th><th>Name</th><th>Category</th><th>UOM</th><th>Unit Price</th><th>Reorder Pt</th><th>Actions</th></tr></thead>
+              <thead><tr><th>Code</th><th>Name</th><th>Category</th><th>Unit Price</th><th>Reorder Pt</th><th>Actions</th></tr></thead>
               <tbody></tbody>
             </table>
           </div>
@@ -277,6 +277,5 @@
   <script>document.addEventListener('DOMContentLoaded',()=>{if(window.utils){utils.wrapFetchWithRole?.();utils.applyStoredTheme?.();utils.applyNavVisibility?.();utils.setupLogout?.();}});</script>
 </body>
 </html>
-
 
 
