Add material, shape, brand, and notes fields to item management

--- a/inventory-list.html
+++ b/inventory-list.html
@@ -98,6 +98,7 @@
           <table id="invTable">
             <thead>
               <tr>
+                <th class="mobile-only">Item</th>
                 <th>Code</th>
                 <th>Name</th>
                 <th>Qty (Available)</th>
